sf-hrms/force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <label>Company Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>