sf-hrms/force-app/main/default/objects/Asset__c/fields/Asset_Tag__c.field-meta.xml
<CustomField><fullName>Asset_Tag__c</fullName><label>Asset Tag</label><type>Text</type><length>50</length><externalId>true</externalId><unique>true</unique></CustomField>