sf-hrms/force-app/main/default/objects/Asset__c/fields/Assigned_To__c.field-meta.xml
<CustomField><fullName>Assigned_To__c</fullName><label>Assigned To</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Company Assets</relationshipLabel><relationshipName>Company_Assets</relationshipName></CustomField>