sf-hrms/force-app/main/default/objects/Asset__c/fields/Purchase_Date__c.field-meta.xml
<CustomField><fullName>Purchase_Date__c</fullName><label>Purchase Date</label><type>Date</type></CustomField>