sf-hrms/force-app/main/default/objects/Asset__c/fields/Purchase_Value__c.field-meta.xml
<CustomField><fullName>Purchase_Value__c</fullName><label>Purchase Value</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>