sf-hrms/force-app/main/default/objects/Asset__c/fields/Serial_Number__c.field-meta.xml
<CustomField><fullName>Serial_Number__c</fullName><label>Serial Number</label><type>Text</type><length>100</length></CustomField>