sf-hrms/force-app/main/default/objects/Asset__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Available</fullName><default>true</default></value><value><fullName>Assigned</fullName><default>false</default></value><value><fullName>Under Repair</fullName><default>false</default></value><value><fullName>Retired</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>