sf-hrms/force-app/main/default/objects/Asset__c/fields/Type__c.field-meta.xml
<CustomField><fullName>Type__c</fullName><label>Type</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Laptop</fullName><default>false</default></value><value><fullName>Mobile</fullName><default>false</default></value><value><fullName>Monitor</fullName><default>false</default></value><value><fullName>Access Card</fullName><default>false</default></value><value><fullName>Headset</fullName><default>false</default></value><value><fullName>Other</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>